@@ -200,6 +200,7 @@ namespace libtorrent
 
 		if (error)
 		{
+			m_statistics.received_bytes(0, bytes_transferred);
 #ifdef TORRENT_VERBOSE_LOGGING
 			(*m_logger) << "*** http_seed_connection error: "
 				<< error.message() << "\n";
@@ -220,6 +221,7 @@ namespace libtorrent
 			TORRENT_ASSERT(!m_requests.empty());
 			if (m_requests.empty())
 			{
+				m_statistics.received_bytes(0, bytes_transferred);
 				disconnect(errors::http_error, 2);
 				return;
 			}
@@ -239,6 +241,7 @@ namespace libtorrent
 
 				if (error)
 				{
+					m_statistics.received_bytes(0, bytes_transferred);
 					disconnect(errors::http_parse_error, 2);
 					return;
 				}
@@ -270,6 +273,7 @@ namespace libtorrent
 						m_ses.m_alerts.post_alert(url_seed_alert(t->get_handle(), url()
 							, error_msg));
 					}
+					m_statistics.received_bytes(0, bytes_transferred);
 					disconnect(errors::http_error, 1);
 					return;
 				}
@@ -289,6 +293,7 @@ namespace libtorrent
 					// this means we got a redirection request
 					// look for the location header
 					std::string location = m_parser.header("location");
+					m_statistics.received_bytes(0, bytes_transferred);
 
 					if (location.empty())
 					{
@@ -318,6 +323,7 @@ namespace libtorrent
 				m_response_left = atol(m_parser.header("content-length").c_str());
 				if (m_response_left == -1)
 				{
+					m_statistics.received_bytes(0, bytes_transferred);
 					// we should not try this server again.
 					t->remove_web_seed(this);
 					disconnect(errors::no_content_length, 2);
@@ -350,6 +356,7 @@ namespace libtorrent
 				(*m_logger) << time_now_string() << ": retrying in " << retry_time << " seconds\n";
 #endif
 
+				m_statistics.received_bytes(0, bytes_transferred);
 				// temporarily unavailable, retry later
 				t->retry_web_seed(this, retry_time);
 				disconnect(errors::http_error, 1);
